change CMakeLists.txt for m1 mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,15 @@
+set(CMAKE_CXX_COMPILER "/usr/local/bin/g++")
+set(CMAKE_CXX_COMPILER_ID "GNU")
+set(OpenMP_C "${CMAKE_C_COMPILER}")
+set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp")
+set(OpenMP_C_LIB_NAMES "libomp")
+set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
+set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
+set(OpenMP_libiomp5_LIBRARY ${OpenMP_C_LIB_NAMES})
+set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
+set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp")
+set(OpenMP_CXX_LIB_NAMES "libomp")
+
 if(APPLE)
   cmake_minimum_required(VERSION 3.0)
 else()
@@ -36,13 +48,18 @@ if(${UNIX})
             set(BASE_OPTIONS "${BASE_OPTIONS} -fopenmp")
         endif()
 
+        if(${NGT_ASSERT_DISABLED})
+            message(STATUS "assert() is disabled.")
+            set(BASE_OPTIONS "${BASE_OPTIONS} -DNDEBUG")
+        endif()
+
         set(CMAKE_CXX_FLAGS_DEBUG "-g ${BASE_OPTIONS}")
 
         if(${NGT_MARCH_NATIVE_DISABLED})
             message(STATUS "Compile option -march=native is disabled.")
             set(CMAKE_CXX_FLAGS_RELEASE "-O2 ${BASE_OPTIONS}")
         else()
-            set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native ${BASE_OPTIONS}")
+            set(CMAKE_CXX_FLAGS_RELEASE "-O3 -I/opt/homebrew//Cellar/libomp/15.0.6/include/ ${BASE_OPTIONS}")
         endif()
     else()
         if (CMAKE_BUILD_TYPE_LOWER STREQUAL "release")
@@ -51,10 +68,14 @@ if(${UNIX})
                 message(STATUS "Compile option -march=native is disabled.")
                 add_compile_options(-O2 -DNDEBUG)
             else()
-                add_compile_options(-Ofast -march=native -DNDEBUG)
+                if(${NGT_AVX2})
+                    add_compile_options(-Ofast -march=haswell -DNDEBUG)
+                else()
+                    add_compile_options(-Ofast -I/opt/homebrew//Cellar/libomp/15.0.6/include/ -DNDEBUG)
+                endif()
             endif()
         endif()
-	add_compile_options(-Wall)
+        add_compile_options(-Wall)
         if(${NGT_AVX_DISABLED})
             message(STATUS "AVX will not be used to compute distances.")
         endif()
@@ -73,6 +94,12 @@ if(${UNIX})
         set(CMAKE_CXX_STANDARD 11) # for std::unordered_set, std::unique_ptr
         set(CMAKE_CXX_STANDARD_REQUIRED ON)
 	find_package(Threads REQUIRED)
+        if(${NGT_QBG_DISABLED})
+            message(STATUS "QBG is disabled.")
+        else()
+            find_package(BLAS REQUIRED)
+            find_package(LAPACK REQUIRED)
+        endif()
     endif() 
 
     add_subdirectory("${PROJECT_SOURCE_DIR}/lib")
